--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -368,6 +368,9 @@
                                     <h5 th:text="${touritem.title}"></h5>
                                 </a>
                             </td>
+                            <td rowspan="3" class="touritem-bookmark-count">
+                                <p th:text="${touritem.bookmarkCount}"></p>
+                            </td>
                         </tr>
                         <tr>
                             <td class="touritem-contents">
