--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,7 +15,7 @@
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><a href="/info/area" class="nav-link px-2" >여행정보</a></li>
-                <li><a href="javascript:alert('준비중입니다.');" class="nav-link px-2">여행일정</a></li>
+                <li><a href="/planner" class="nav-link px-2">여행일정</a></li>
                 <li><a href="/board" class="nav-link px-2">커뮤니티</a></li>
             </ul>
 
