지역별 내 북마크

--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -886,7 +886,7 @@ function deleteMarkers() {
 
 
                         <th:block th:unless="${pageResponse.total > 0}">
-                            <p class="mb-1 touritem-no-contents" th:text="${touritem.title}">
+                            <p class="mb-1 touritem-no-contents">
                                 검색된 관광지 정보가 없습니다.
                             </p>
                         </th:block>
