--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -38,7 +38,7 @@
                                 <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/logout">로그아웃</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" sec:authorize="isAnonymous()" href="/join">회원가입</a>
-                                <a class="dropdown-item" sec:authorize="isAuthenticated()"  href="/mypage">마이페이지</a></li>
+                                <a class="dropdown-item" sec:authorize="isAuthenticated()" th:href="@{/mypage/{userId}(userId=${#authentication.principal.username})}">마이페이지</a></li>
                             </li>
                         </ul>
 <!--                    </c:when>-->
