--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -794,27 +794,27 @@ function deleteMarkers() {
                 일정
             </a>
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
-                <li class="nav-item">
+                <li class="nav-item" role="presentation">
                     <a href="#" class="nav-link active py-3 border-bottom" aria-current="page" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
                         Day 1
                     </a>
                 </li>
-                <li>
+                <li role="presentation">
                     <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
                         Day 2
                     </a>
                 </li>
-                <li>
+                <li role="presentation">
                     <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Orders">
                         Day 3
                     </a>
                 </li>
-                <li>
+                <li role="presentation">
                     <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Products">
                         Day 4
                     </a>
                 </li>
-                <li>
+                <li role="presentation">
                     <a href="#" class="nav-link py-3 border-bottom" title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Customers">
                         Day 5
                     </a>
