--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -864,8 +864,11 @@ function deleteMarkers() {
                             <a class="list-group-item list-group-item-action py-3 lh-tight" aria-current="true">
                                 <div class="d-flex w-100 align-items-center justify-content-between">
                                     <!-- 이미지 출력하기 -->
-                                    <img class="thumbnail" th:if="${touritem.firstimage == null || touritem.firstimage.isEmpty()}" src="../../assets/img/no_img.jpg">
-                                    <img class="thumbnail" th:unless="${touritem.firstimage == null || touritem.firstimage.isEmpty()}" th:src="${touritem.firstimage}">
+                                    <div style="width: 60px; height: 60px;">
+                                        <img class="thumbnail" th:if="${touritem.firstimage == null || touritem.firstimage.isEmpty()}" src="../../../assets/img/no_img.jpg">
+                                        <img class="thumbnail" th:unless="${touritem.firstimage == null || touritem.firstimage.isEmpty()}" th:src="${touritem.firstimage}">
+                                    </div>
+
 
                                     <div th:title="${touritem.title}" class="ps-3">
                                         <input type="hidden" th:id="mapx" th:value="${touritem.mapx}">
